--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         </dependency>
     </dependencies>
     <repositories>
-        <repository><id>central</id><url>http://repo1.maven.org/maven2/</url></repository>
+        <repository><id>central</id><url>https://repo1.maven.org/maven2/</url></repository>
     </repositories>
     <build>
         <plugins>
